# trainspotting

./: .gitignore  README.md
diffsolver/: Cargo.toml
docs/: .gitignore
livehtml/: Cargo.toml
livehtml/src/: watch_milelang.rs
milelang/src/: lib.rs
planner/src/: eliminate_detectors.rs  input.rs  lib.rs  optimize.rs  solver.rs  tests.rs
railml2dgraph/: Cargo.toml
railperfcheck/src/TrainPlan/: Parser.hs
rolling/: Cargo.toml
rolling/src/: lib.rs
rolling/src/input/: route_parser.rs  staticinfrastructure.rs  staticinfrastructure_parser.rs
rolling/src/output/: graphical.rs  history.rs  json.rs
rolling/src/railway/: driver.rs  dynamics.rs  infrastructure.rs  route.rs
vis-rs/: Cargo.toml
vis-rs/src/: convert.rs  lib.rs  main.rs
